--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
 
     <groupId>org.jboss.quickstarts.eap</groupId>
     <artifactId>jboss-helloworld</artifactId>
-    <version>6.4.1-SNAPSHOT</version>
+    <version>6.4.1</version>
     <packaging>war</packaging>
     <name>JBoss EAP Quickstart: helloworld</name>
     <description>JBoss EAP Quickstart: Helloworld</description>
